--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,7 @@
     "dotenv": "^17.2.3",
     "express": "^4.18.2",
     "multer": "^2.0.2",
+    "pdf-parse": "^2.4.5",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
